--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,15 +11,15 @@
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
-    "@prisma/client": "^5.10.0",
-    "express": "^4.18.2",
-    "dotenv": "^16.0.3",
-    "jsonwebtoken": "^9.0.0",
+    "@prisma/client": "^5.10.2",
     "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "prisma": "^5.10.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "prisma": "^5.10.2"
   }
 }
