--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,16 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/axios": "^0.9.36",
     "@types/node": "^16.18.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "autoprefixer": "^10.4.13",
+    "axios": "^1.9.0",
+    "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
-    "typescript": "^4.9.5",
     "tailwindcss": "^3.2.7",
-    "postcss": "^8.4.21",
-    "autoprefixer": "^10.4.13"
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
