--- a/hello-prisma/package.json
+++ b/hello-prisma/package.json
@@ -9,7 +9,8 @@
     "@prisma/client": "6.8.2",
     "@prisma/extension-accelerate": "1.3.0",
     "@types/node": "22.15.21",
-    "dotenv": "16.5.0"
+    "dotenv": "16.5.0",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
     "prisma": "6.8.2",
