--- a/hello-prisma/package.json
+++ b/hello-prisma/package.json
@@ -2,15 +2,33 @@
   "name": "hello-prisma",
   "license": "MIT",
   "scripts": {
+    "dev": "ts-node src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
     "queries": "ts-node ./src/queries.ts",
     "caching": "ts-node ./src/caching.ts"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
     "@prisma/client": "6.8.2",
     "@prisma/extension-accelerate": "1.3.0",
+    "@tanstack/react-query": "^5.77.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.18",
+    "@types/express": "^5.0.2",
     "@types/node": "22.15.21",
+    "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "16.5.0",
-    "ytdl-core": "^4.11.5"
+    "express": "^5.1.0",
+    "formik": "^2.4.6",
+    "react-router-dom": "^7.6.1",
+    "ytdl-core": "^4.11.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "prisma": "6.8.2",
