--- a/hello-prisma/package.json
+++ b/hello-prisma/package.json
@@ -1,38 +1,54 @@
 {
   "name": "hello-prisma",
-  "license": "MIT",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "server": "ts-node src/index.ts",
+    "client": "cd frontend && npm start",
     "build": "tsc",
     "start": "node dist/index.js",
-    "queries": "ts-node ./src/queries.ts",
-    "caching": "ts-node ./src/caching.ts"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
-    "@prisma/client": "6.8.2",
+    "@prisma/client": "^5.10.2",
     "@prisma/extension-accelerate": "1.3.0",
     "@tanstack/react-query": "^5.77.0",
     "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.18",
-    "@types/express": "^5.0.2",
-    "@types/node": "22.15.21",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.11.24",
     "axios": "^1.9.0",
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "16.5.0",
-    "express": "^5.1.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "fluent-ffmpeg": "^2.1.3",
     "formik": "^2.4.6",
+    "jsonwebtoken": "^9.0.2",
     "react-router-dom": "^7.6.1",
     "ytdl-core": "^4.11.5",
     "yup": "^1.6.1"
   },
   "devDependencies": {
-    "prisma": "6.8.2",
-    "ts-node": "10.9.2",
-    "typescript": "5.8.2"
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.11.24",
+    "concurrently": "^8.2.2",
+    "prisma": "^5.10.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
